bookstack/static/css/style.css
/* LOAD GOOGLE FONTS */

@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');


/* GLOBAL STYLES */ 

:root {
    --main-margin: 3rem;
    --card-box-shadow: 1px 1px 10px rgba(209, 209, 209, 0.91);
    --card-border-radius: 9px;
    --font: 'Merriweather', sans-serif;
}

h1, h2 {
    font-family: var(--font);
}

h1 {
    font-size: 2.7rem;
}

h2 {
    font-size: 1.5rem;
    margin-left: 20px;
}

h3 {
    font-size: 1rem;
}

main {
    min-height: calc(100vh - 34px - 203px);
}

/* GRID LAYOUTS */ 

.grid-container {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
    grid-template-areas: 
        "first-card second-card"
        "third-card third-card";
    grid-gap: 3rem;
    margin: var(--main-margin);
}

@media only screen and (max-width: 500px) {
    .grid-container {
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: repeat(3, 1fr);
        grid-template-areas: 
            "first-card"
            "second-card"
            "third-card";
        column-gap: 0.5rem;
        margin: 0.5rem;
        row-gap: 2rem;
    }

    .book-cover, .challenge-title, .edit-button, .review, .review-title, .review-author {
        margin-left: 30px;
    }
    
}

@media only screen and (min-width: 501px) {
    .book-cover {
        height: 150px;
        margin-left: 20px;
    }

    .edit-button {
        margin-bottom: 20px;
    }

    .challenge-in-card, .review-in-page,
    .book-in-card, .review-in-card {
        margin-left: 20px;
    }
}

#first-card {
    grid-area: first-card;
}

#second-card {
    grid-area: second-card;
}

#third-card {
    grid-area: third-card;
}

#first-card, #second-card, #third-card {
    box-shadow: var(--card-box-shadow);
    border-radius: var(--card-border-radius);
}

@media only screen and (max-width: 1141px) {
    .inner-see-more {
        margin-left: 125%;
    }
}

@media only screen and (min-width: 1142px) {
    .see-more {
        position: relative;
    }

    .inner-see-more {
        position: absolute;
        top: 50%;
        height: 100px;
        margin-top: -50px;
    }

    main {
        padding-bottom: 10px;
    }
}

@media only screen and (max-width: 700px) {
    .inner-see-more {
        margin-left: 1%;
    }
}

.flash-msg {
    margin-left: 20px;
    font-size: 30px;
    color: red;
}

.book-in-card {
    grid: book-in-card;
}

.book-cover {
    border: 1px white;
    border-radius: var(--card-border-radius);
}

.stack-cover {
    margin-top: 20px;
    border-radius: var(--card-border-radius);
}

.stack-title {
    font-size: 22px;
    margin-bottom: 1px;
}

.stack-author {
    margin: 1px;
}

.stack-unread-red {
    color: red;
}

.stack-unread-grn {
    color: green;
}

.red-icon {
    color: red!important;
}

.grn-icon {
    color: green!important;
}

.full-card {
    margin: 40px;
    box-shadow: var(--card-box-shadow);
    border-radius: var(--card-border-radius);
}

.card-icon-see-more {
    font-size: 30px;
}

.challenge-title {
    font-size: 22px;
}

.review, .review-in-page {
    font-size: 32px;
}

.review-title, .review-author {
    margin-top: 1px;
    margin-bottom: 1px;
}

.review-author {
    margin-bottom: 20px;
}

.review-title {
    font-size: 22px;
}

/* NAVBAR */

body {
    /* body content pushed to accommodate fixed navside. */
    padding-left: 300px;
}

@media only screen and (max-width : 992px) {
    body {
        padding-left: 0;
    }
}

@media only screen and (min-width : 993px) {
    .sidenav-trigger {
        visibility: hidden;
    }
}

@media only screen and (max-width : 992px) {
    .sidenav-trigger {
        margin-top: -50px;
        padding: 10px;

    }
}

.sidenav-trigger {
    display: block;
}

#logo_svg {
    margin-top: 15px;
}

.navbar_image img {
    max-width: 80%;
    margin-left: 20px;
}

.navbar-icons {
    color: #725751!important;
}

nav a {
    text-align: left;
}

/* BOOK AND CARD ELEMENTS */

.book-author {
    margin-top: 2px;
    margin-left: 30px;
}

.book-title {
    margin-bottom: 4px;
    margin-bottom: 0px;
    margin-left: 30px;
    font-size: 22px;
}

.book-button {
    margin-left: 30px;
}

.to-read-stack {
    display: inline;
}

.to-read-stack > a, .full-card > a, .grid-card > a {
    margin-left: auto;
    margin-right: 0.5em;
    margin-top: 0.5em;
}

.to-read-stack > a > i, .full-card > a > i, .grid-card > a > i {
    font-size: 40px!important;
}

.stack-header {
    display: inline-block;
}

.add-icon {
    float: right;
}

/* FORMS */

@media only screen and (min-width: 1025px) {
    .input-field {
        height: 100px!important;
    }
}

.form-redirect-query {
    margin-left: 15px;
}

/* BUTTONS AND ICONS */

button, a {
    margin-bottom: 5px;
}

.material-icons {
    color: black;
} 

.material-icons:hover {
    color: green;
} 

#add_book {
    margin-top: 20px;
}

.hidden {
    display: none;
}

.card-icons {
    font-size: 20px;
}

.page-headers, .dash-desc {
    margin-left: 2.5rem;
}

.profile-label {
    margin-bottom: 10px;
    font-size: 20px;
}

.edit-button {
    color: black;
}

.stack-btn {
    margin-top: 15px;
}

.user-image {
    width: 100%;
    border-radius: 20%;
}

/* HOME PAGE */

.home-img {
    width: 100%;
}

.img-label {
    margin-top: 20px;
}

@media only screen and (max-width: 505px) {
    .home-img {
        width: 258px;
        height: 258px;
    }
}


#home-body {
    padding-left: 10px!important;
    height: 100vh;
    margin-top: 30px;
}

.home-cont {
    margin-top: 50px;
}

/* FOOTER */

.page-footer {
    bottom: 0px;
    width: 100%;
}

.footer-row {
    margin-bottom: 0px;
}

